Adding some minor text, pushing to github for the first time in this project

--- a/S4 Code and RICLPM.Rmd
+++ b/S4 Code and RICLPM.Rmd
@@ -9,6 +9,7 @@ output: html_document
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
+Not sure where to put the correlated residuals part still...
 
 
 ##### APIM Test Code
