--- a/S4 Code and RICLPM.Rmd
+++ b/S4 Code and RICLPM.Rmd
@@ -288,6 +288,7 @@ base.m1 <- '
   
   
   # Specify lagged effects between within-person centered latent variables
+  # Should be 8 total (16 maximum, but indistinguishable constraints down half of them)
   # (we need these to account for Partner Bs previous responses; it needs to be partialed. Non specifying these == to saything those paths are zero) 
   # outcome:individual:type
   # kaa = kama muta outcome: actor : autoregressive (coming from kama muta)
@@ -295,7 +296,7 @@ base.m1 <- '
   # kac = kama muta outcome: actor : crosslagged (coming from ppr)
   # kpc = kama muta outcome: partner : crosslagged
 
-  # For KM effects.
+  # For KM effects.(I might not need the B paths, actually! These are regressions, not definitions, so they should NOT be caring partialing variance. So probs can take out.  # Might want to compare just in case though)
   AWFkm2 ~ kaa1*AWFkm1 + kpa1*BWFkm1 + kac1*AWFppr1 + kpc1*BWFppr1 
   BWFkm2 ~ kaa1*BWFkm1 + kpa1*AWFkm1 + kac1*BWFppr1 + kpc1*AWFppr1
   AWFkm3 ~ kaa2*AWFkm2 + kpa2*BWFkm2 + kac2*AWFppr2 + kpc2*BWFppr2 
@@ -417,6 +418,366 @@ base.m1.fit <- cfa(base.m1,
                    )
 summary(base.m1.fit,fit.measures = T, standardized =T, ci = T)
 ```
+
+base.m1b is the same but just taking out those partner regressions that I thiiink are unnecessary, redundant calculations
+```{r}
+base.m1b <- '
+
+  #####################
+  # MEASUREMENT MODEL #
+  #####################
+  
+  ####### Partner A ######
+  
+  # Factor models for km at 14 waves (Unconstrained)
+  AFkm1 =~ Akm1_t1 + Akm4_t1 + Akm5_t1 + Akm6_t1
+  AFkm2 =~ Akm1_t2 + Akm4_t2 + Akm5_t2 + Akm6_t2
+  AFkm3 =~ Akm1_t3 + Akm4_t3 + Akm5_t3 + Akm6_t3
+  AFkm4 =~ Akm1_t4 + Akm4_t4 + Akm5_t4 + Akm6_t4
+  AFkm5 =~ Akm1_t5 + Akm4_t5 + Akm5_t5 + Akm6_t5
+  AFkm6 =~ Akm1_t6 + Akm4_t6 + Akm5_t6 + Akm6_t6
+  AFkm7 =~ Akm1_t7 + Akm4_t7 + Akm5_t7 + Akm6_t7
+  AFkm8 =~ Akm1_t8 + Akm4_t8 + Akm5_t8 + Akm6_t8
+  AFkm9 =~ Akm1_t9 + Akm4_t9 + Akm5_t9 + Akm6_t9
+  AFkm10 =~ Akm1_t10 + Akm4_t10 + Akm5_t10 + Akm6_t10
+  AFkm11 =~ Akm1_t11 + Akm4_t11 + Akm5_t11 + Akm6_t11
+  AFkm12 =~ Akm1_t12 + Akm4_t12 + Akm5_t12 + Akm6_t12
+  AFkm13 =~ Akm1_t13 + Akm4_t13 + Akm5_t13 + Akm6_t13
+  AFkm14 =~ Akm1_t14 + Akm4_t14 + Akm5_t14 + Akm6_t14
+  
+  
+  # Factor models for ppr at 14 waves (Unconstrained)
+  AFppr1 =~ Appr1_t1 + Appr2_t1 + Appr3_t1 + Appr4_t1
+  AFppr2 =~ Appr1_t2 + Appr2_t2 + Appr3_t2 + Appr4_t2
+  AFppr3 =~ Appr1_t3 + Appr2_t3 + Appr3_t3 + Appr4_t3
+  AFppr4 =~ Appr1_t4 + Appr2_t4 + Appr3_t4 + Appr4_t4
+  AFppr5 =~ Appr1_t5 + Appr2_t5 + Appr3_t5 + Appr4_t5
+  AFppr6 =~ Appr1_t6 + Appr2_t6 + Appr3_t6 + Appr4_t6
+  AFppr7 =~ Appr1_t7 + Appr2_t7 + Appr3_t7 + Appr4_t7
+  AFppr8 =~ Appr1_t8 + Appr2_t8 + Appr3_t8 + Appr4_t8
+  AFppr9 =~ Appr1_t9 + Appr2_t9 + Appr3_t9 + Appr4_t9
+  AFppr10 =~ Appr1_t10 + Appr2_t10 + Appr3_t10 + Appr4_t10
+  AFppr11 =~ Appr1_t11 + Appr2_t11 + Appr3_t11 + Appr4_t11
+  AFppr12 =~ Appr1_t12 + Appr2_t12 + Appr3_t12 + Appr4_t12
+  AFppr13 =~ Appr1_t13 + Appr2_t13 + Appr3_t13 + Appr4_t13
+  AFppr14 =~ Appr1_t14 + Appr2_t14 + Appr3_t14 + Appr4_t14
+  
+  
+   ####### Partner B ######
+
+  # Factor models for km at 14 waves (Unconstrained)
+  BFkm1 =~ Bkm1_t1 + Bkm4_t1 + Bkm5_t1 + Bkm6_t1
+  BFkm2 =~ Bkm1_t2 + Bkm4_t2 + Bkm5_t2 + Bkm6_t2
+  BFkm3 =~ Bkm1_t3 + Bkm4_t3 + Bkm5_t3 + Bkm6_t3
+  BFkm4 =~ Bkm1_t4 + Bkm4_t4 + Bkm5_t4 + Bkm6_t4
+  BFkm5 =~ Bkm1_t5 + Bkm4_t5 + Bkm5_t5 + Bkm6_t5
+  BFkm6 =~ Bkm1_t6 + Bkm4_t6 + Bkm5_t6 + Bkm6_t6
+  BFkm7 =~ Bkm1_t7 + Bkm4_t7 + Bkm5_t7 + Bkm6_t7
+  BFkm8 =~ Bkm1_t8 + Bkm4_t8 + Bkm5_t8 + Bkm6_t8
+  BFkm9 =~ Bkm1_t9 + Bkm4_t9 + Bkm5_t9 + Bkm6_t9
+  BFkm10 =~ Bkm1_t10 + Bkm4_t10 + Bkm5_t10 + Bkm6_t10
+  BFkm11 =~ Bkm1_t11 + Bkm4_t11 + Bkm5_t11 + Bkm6_t11
+  BFkm12 =~ Bkm1_t12 + Bkm4_t12 + Bkm5_t12 + Bkm6_t12
+  BFkm13 =~ Bkm1_t13 + Bkm4_t13 + Bkm5_t13 + Bkm6_t13
+  BFkm14 =~ Bkm1_t14 + Bkm4_t14 + Bkm5_t14 + Bkm6_t14
+  
+  
+  # Factor models for ppr at 14 waves (Unconstrained)
+  BFppr1 =~ Bppr1_t1 + Bppr2_t1 + Bppr3_t1 + Bppr4_t1
+  BFppr2 =~ Bppr1_t2 + Bppr2_t2 + Bppr3_t2 + Bppr4_t2
+  BFppr3 =~ Bppr1_t3 + Bppr2_t3 + Bppr3_t3 + Bppr4_t3
+  BFppr4 =~ Bppr1_t4 + Bppr2_t4 + Bppr3_t4 + Bppr4_t4
+  BFppr5 =~ Bppr1_t5 + Bppr2_t5 + Bppr3_t5 + Bppr4_t5
+  BFppr6 =~ Bppr1_t6 + Bppr2_t6 + Bppr3_t6 + Bppr4_t6
+  BFppr7 =~ Bppr1_t7 + Bppr2_t7 + Bppr3_t7 + Bppr4_t7
+  BFppr8 =~ Bppr1_t8 + Bppr2_t8 + Bppr3_t8 + Bppr4_t8
+  BFppr9 =~ Bppr1_t9 + Bppr2_t9 + Bppr3_t9 + Bppr4_t9
+  BFppr10 =~ Bppr1_t10 + Bppr2_t10 + Bppr3_t10 + Bppr4_t10
+  BFppr11 =~ Bppr1_t11 + Bppr2_t11 + Bppr3_t11 + Bppr4_t11
+  BFppr12 =~ Bppr1_t12 + Bppr2_t12 + Bppr3_t12 + Bppr4_t12
+  BFppr13 =~ Bppr1_t13 + Bppr2_t13 + Bppr3_t13 + Bppr4_t13
+  BFppr14 =~ Bppr1_t14 + Bppr2_t14 + Bppr3_t14 + Bppr4_t14
+  
+  #### Dyadic residual COvariances at item level #### (individual variances are estimated as part of the cfa function default)
+  #KM#
+  Akm1_t1 ~~ Bkm1_t1; Akm4_t1 ~~ Bkm4_t1 ;  Akm5_t1 ~~ Bkm5_t1 ;  Akm6_t1 ~~ Bkm6_t1
+  Akm1_t2 ~~ Bkm1_t2; Akm4_t2 ~~ Bkm4_t2 ;  Akm5_t2 ~~ Bkm5_t2 ;  Akm6_t2 ~~ Bkm6_t2
+  Akm1_t3 ~~ Bkm1_t3; Akm4_t3 ~~ Bkm4_t3 ;  Akm5_t3 ~~ Bkm5_t3 ;  Akm6_t3 ~~ Bkm6_t3
+  Akm1_t4 ~~ Bkm1_t4; Akm4_t4 ~~ Bkm4_t4 ;  Akm5_t4 ~~ Bkm5_t4 ;  Akm6_t4 ~~ Bkm6_t4
+  Akm1_t5 ~~ Bkm1_t5; Akm4_t5 ~~ Bkm4_t5 ;  Akm5_t5 ~~ Bkm5_t5 ;  Akm6_t5 ~~ Bkm6_t5
+  Akm1_t6 ~~ Bkm1_t6; Akm4_t6 ~~ Bkm4_t6 ;  Akm5_t6 ~~ Bkm5_t6 ;  Akm6_t6 ~~ Bkm6_t6
+  Akm1_t7 ~~ Bkm1_t7; Akm4_t7 ~~ Bkm4_t7 ;  Akm5_t7 ~~ Bkm5_t7 ;  Akm6_t7 ~~ Bkm6_t7
+  Akm1_t8 ~~ Bkm1_t8; Akm4_t8 ~~ Bkm4_t8 ;  Akm5_t8 ~~ Bkm5_t8 ;  Akm6_t8 ~~ Bkm6_t8
+  Akm1_t9 ~~ Bkm1_t9; Akm4_t9 ~~ Bkm4_t9 ;  Akm5_t9 ~~ Bkm5_t9 ;  Akm6_t9 ~~ Bkm6_t9
+  Akm1_t10 ~~ Bkm1_t10; Akm4_t10 ~~ Bkm4_t10 ; Akm5_t10 ~~ Bkm5_t10 ; Akm6_t10 ~~ Bkm6_t10
+  Akm1_t11 ~~ Bkm1_t11; Akm4_t11 ~~ Bkm4_t11 ; Akm5_t11 ~~ Bkm5_t11 ; Akm6_t11 ~~ Bkm6_t11
+  Akm1_t12 ~~ Bkm1_t12; Akm4_t12 ~~ Bkm4_t12 ; Akm5_t12 ~~ Bkm5_t12 ; Akm6_t12 ~~ Bkm6_t12
+  Akm1_t13 ~~ Bkm1_t13; Akm4_t13 ~~ Bkm4_t13 ; Akm5_t13 ~~ Bkm5_t13 ; Akm6_t13 ~~ Bkm6_t13
+  Akm1_t14 ~~ Bkm1_t14; Akm4_t14 ~~ Bkm4_t14 ; Akm5_t14 ~~ Bkm5_t14 ; Akm6_t14 ~~ Bkm6_t14
+  
+  #PPR#
+  Appr1_t1 ~~ Bppr1_t1; Appr4_t1 ~~ Bppr4_t1 ; Appr5_t1 ~~ Bppr5_t1 ; Appr6_t1 ~~ Bppr6_t1
+  Appr1_t2 ~~ Bppr1_t2; Appr4_t2 ~~ Bppr4_t2 ; Appr5_t2 ~~ Bppr5_t2 ; Appr6_t2 ~~ Bppr6_t2
+  Appr1_t3 ~~ Bppr1_t3; Appr4_t3 ~~ Bppr4_t3 ; Appr5_t3 ~~ Bppr5_t3 ; Appr6_t3 ~~ Bppr6_t3
+  Appr1_t4 ~~ Bppr1_t4; Appr4_t4 ~~ Bppr4_t4 ; Appr5_t4 ~~ Bppr5_t4 ; Appr6_t4 ~~ Bppr6_t4
+  Appr1_t5 ~~ Bppr1_t5; Appr4_t5 ~~ Bppr4_t5 ; Appr5_t5 ~~ Bppr5_t5 ; Appr6_t5 ~~ Bppr6_t5
+  Appr1_t6 ~~ Bppr1_t6; Appr4_t6 ~~ Bppr4_t6 ; Appr5_t6 ~~ Bppr5_t6 ; Appr6_t6 ~~ Bppr6_t6
+  Appr1_t7 ~~ Bppr1_t7; Appr4_t7 ~~ Bppr4_t7 ; Appr5_t7 ~~ Bppr5_t7 ; Appr6_t7 ~~ Bppr6_t7
+  Appr1_t8 ~~ Bppr1_t8; Appr4_t8 ~~ Bppr4_t8 ; Appr5_t8 ~~ Bppr5_t8 ; Appr6_t8 ~~ Bppr6_t8
+  Appr1_t9 ~~ Bppr1_t9; Appr4_t9 ~~ Bppr4_t9 ; Appr5_t9 ~~ Bppr5_t9 ; Appr6_t9 ~~ Bppr6_t9
+  Appr1_t10 ~~ Bppr1_t10; Appr4_t10 ~~ Bppr4_t10; Appr5_t10 ~~ Bppr5_t10 ; Appr6_t10 ~~ Bppr6_t10
+  Appr1_t11 ~~ Bppr1_t11; Appr4_t11 ~~ Bppr4_t11; Appr5_t11 ~~ Bppr5_t11 ; Appr6_t11 ~~ Bppr6_t11
+  Appr1_t12 ~~ Bppr1_t12; Appr4_t12 ~~ Bppr4_t12; Appr5_t12 ~~ Bppr5_t12 ; Appr6_t12 ~~ Bppr6_t12
+  Appr1_t13 ~~ Bppr1_t13; Appr4_t13 ~~ Bppr4_t13; Appr5_t13 ~~ Bppr5_t13 ; Appr6_t13 ~~ Bppr6_t13
+  Appr1_t14 ~~ Bppr1_t14; Appr4_t14 ~~ Bppr4_t14; Appr5_t14 ~~ Bppr5_t14 ; Appr6_t14 ~~ Bppr6_t14
+  
+  
+  ################
+  # BETWEEN PART #
+  ################
+  
+  
+  # Create between factors (RIs)
+  ARIkm =~ 1*AFkm1 + 1*AFkm2 + 1*AFkm3 + 1*AFkm4 + 1*AFkm5 + 1*AFkm6 + 1*AFkm7 + 1*AFkm8 + 1*AFkm9 + 1*AFkm10 + 1*AFkm11 + 1*AFkm12 + 1*AFkm13 + 1*AFkm14
+  ARIppr =~ 1*AFppr1 + 1*AFppr2 + 1*AFppr3 + 1*AFppr4 + 1*AFppr5 + 1*AFppr6 + 1*AFppr7 + 1*AFppr8 + 1*AFppr9 + 1*AFppr10 + 1*AFppr11 + 1*AFppr12 + 1*AFppr13 + 1*AFppr14
+  BRIkm =~ 1*BFkm1 + 1*BFkm2 + 1*BFkm3 + 1*BFkm4 + 1*BFkm5 + 1*BFkm6 + 1*BFkm7 + 1*BFkm8 + 1*BFkm9 + 1*BFkm10 + 1*BFkm11 + 1*BFkm12 + 1*BFkm13 + 1*BFkm14
+  BRIppr =~ 1*BFppr1 + 1*BFppr2 + 1*BFppr3 + 1*BFppr4 + 1*BFppr5 + 1*BFppr6 + 1*BFppr7 + 1*BFppr8 + 1*BFppr9 + 1*BFppr10 + 1*BFppr11 + 1*BFppr12 + 1*BFppr13 + 1*BFppr14
+  
+  # Set residual variances of all Fkm and Fppr vars to 0
+  # I think this specifies all variance of the factors goes to either w/n or b/n
+  AFkm1 ~~ 0*AFkm1
+  AFkm2 ~~ 0*AFkm2
+  AFkm3 ~~ 0*AFkm3
+  AFkm4 ~~ 0*AFkm4
+  AFkm5 ~~ 0*AFkm5
+  AFkm6 ~~ 0*AFkm6
+  AFkm7 ~~ 0*AFkm7
+  AFkm8 ~~ 0*AFkm8
+  AFkm9 ~~ 0*AFkm9
+  AFkm10 ~~ 0*AFkm10
+  AFkm11 ~~ 0*AFkm11
+  AFkm12 ~~ 0*AFkm12
+  AFkm13 ~~ 0*AFkm13
+  AFkm14 ~~ 0*AFkm14
+  AFppr1 ~~ 0*AFppr1
+  AFppr2 ~~ 0*AFppr2
+  AFppr3 ~~ 0*AFppr3
+  AFppr4 ~~ 0*AFppr4
+  AFppr5 ~~ 0*AFppr5
+  AFppr6 ~~ 0*AFppr6
+  AFppr7 ~~ 0*AFppr7
+  AFppr8 ~~ 0*AFppr8
+  AFppr9 ~~ 0*AFppr9
+  AFppr10 ~~ 0*AFppr10
+  AFppr11 ~~ 0*AFppr11
+  AFppr12 ~~ 0*AFppr12
+  AFppr13 ~~ 0*AFppr13
+  AFppr14 ~~ 0*AFppr14
+  
+  BFkm1 ~~ 0*BFkm1
+  BFkm2 ~~ 0*BFkm2
+  BFkm3 ~~ 0*BFkm3
+  BFkm4 ~~ 0*BFkm4
+  BFkm5 ~~ 0*BFkm5
+  BFkm6 ~~ 0*BFkm6
+  BFkm7 ~~ 0*BFkm7
+  BFkm8 ~~ 0*BFkm8
+  BFkm9 ~~ 0*BFkm9
+  BFkm10 ~~ 0*BFkm10
+  BFkm11 ~~ 0*BFkm11
+  BFkm12 ~~ 0*BFkm12
+  BFkm13 ~~ 0*BFkm13
+  BFkm14 ~~ 0*BFkm14
+  BFppr1 ~~ 0*BFppr1
+  BFppr2 ~~ 0*BFppr2
+  BFppr3 ~~ 0*BFppr3
+  BFppr4 ~~ 0*BFppr4
+  BFppr5 ~~ 0*BFppr5
+  BFppr6 ~~ 0*BFppr6
+  BFppr7 ~~ 0*BFppr7
+  BFppr8 ~~ 0*BFppr8
+  BFppr9 ~~ 0*BFppr9
+  BFppr10 ~~ 0*BFppr10
+  BFppr11 ~~ 0*BFppr11
+  BFppr12 ~~ 0*BFppr12
+  BFppr13 ~~ 0*BFppr13
+  BFppr14 ~~ 0*BFppr14
+
+
+  ###############
+  # WITHIN PART #
+  ###############
+
+  # Create within-components
+  AWFkm1 =~ 1*AFkm1
+  AWFkm2 =~ 1*AFkm2
+  AWFkm3 =~ 1*AFkm3
+  AWFkm4 =~ 1*AFkm4
+  AWFkm5 =~ 1*AFkm5
+  AWFkm6 =~ 1*AFkm6
+  AWFkm7 =~ 1*AFkm7
+  AWFkm8 =~ 1*AFkm8
+  AWFkm9 =~ 1*AFkm9
+  AWFkm10 =~ 1*AFkm10
+  AWFkm11 =~ 1*AFkm11
+  AWFkm12 =~ 1*AFkm12
+  AWFkm13 =~ 1*AFkm13
+  AWFkm14 =~ 1*AFkm14
+  
+  AWFppr1 =~ 1*AFppr1
+  AWFppr2 =~ 1*AFppr2
+  AWFppr3 =~ 1*AFppr3
+  AWFppr4 =~ 1*AFppr4
+  AWFppr5 =~ 1*AFppr5
+  AWFppr6 =~ 1*AFppr6
+  AWFppr7 =~ 1*AFppr7
+  AWFppr8 =~ 1*AFppr8
+  AWFppr9 =~ 1*AFppr9
+  AWFppr10 =~ 1*AFppr10
+  AWFppr11 =~ 1*AFppr11
+  AWFppr12 =~ 1*AFppr12
+  AWFppr13 =~ 1*AFppr13
+  AWFppr14 =~ 1*AFppr14
+  
+  BWFkm1 =~ 1*BFkm1
+  BWFkm2 =~ 1*BFkm2
+  BWFkm3 =~ 1*BFkm3
+  BWFkm4 =~ 1*BFkm4
+  BWFkm5 =~ 1*BFkm5
+  BWFkm6 =~ 1*BFkm6
+  BWFkm7 =~ 1*BFkm7
+  BWFkm8 =~ 1*BFkm8
+  BWFkm9 =~ 1*BFkm9
+  BWFkm10 =~ 1*BFkm10
+  BWFkm11 =~ 1*BFkm11
+  BWFkm12 =~ 1*BFkm12
+  BWFkm13 =~ 1*BFkm13
+  BWFkm14 =~ 1*BFkm14
+  
+  BWFppr1 =~ 1*BFppr1
+  BWFppr2 =~ 1*BFppr2
+  BWFppr3 =~ 1*BFppr3
+  BWFppr4 =~ 1*BFppr4
+  BWFppr5 =~ 1*BFppr5
+  BWFppr6 =~ 1*BFppr6
+  BWFppr7 =~ 1*BFppr7
+  BWFppr8 =~ 1*BFppr8
+  BWFppr9 =~ 1*BFppr9
+  BWFppr10 =~ 1*BFppr10
+  BWFppr11 =~ 1*BFppr11
+  BWFppr12 =~ 1*BFppr12
+  BWFppr13 =~ 1*BFppr13
+  BWFppr14 =~ 1*BFppr14
+  
+  
+  # Specify lagged effects between within-person centered latent variables
+  # Should be 8 total (16 maximum, but indistinguishable constraints down half of them)
+  # (we need these to account for Partner Bs previous responses; it needs to be partialed. Non specifying these == to saything those paths are zero) 
+  # outcome:individual:type
+  # kaa = kama muta outcome: actor : autoregressive (coming from kama muta)
+  # kpa = kama muta outcome: partner: autoregressive
+  # kac = kama muta outcome: actor : crosslagged (coming from ppr)
+  # kpc = kama muta outcome: partner : crosslagged
+
+  # For KM effects
+  AWFkm2 ~ kaa1*AWFkm1 + kpa1*BWFkm1 + kac1*AWFppr1 + kpc1*BWFppr1 
+  AWFkm3 ~ kaa2*AWFkm2 + kpa2*BWFkm2 + kac2*AWFppr2 + kpc2*BWFppr2 
+  AWFkm4 ~ kaa3*AWFkm3 + kpa3*BWFkm3 + kac3*AWFppr3 + kpc3*BWFppr3 
+  AWFkm5 ~ kaa4*AWFkm4 + kpa4*BWFkm4 + kac4*AWFppr4 + kpc4*BWFppr4 
+  AWFkm6 ~ kaa5*AWFkm5 + kpa5*BWFkm5 + kac5*AWFppr5 + kpc5*BWFppr5 
+  AWFkm7 ~ kaa6*AWFkm6 + kpa6*BWFkm6 + kac6*AWFppr6 + kpc6*BWFppr6 
+  AWFkm8 ~ kaa7*AWFkm7 + kpa7*BWFkm7 + kac7*AWFppr7 + kpc7*BWFppr7 
+  AWFkm9 ~ kaa8*AWFkm8 + kpa8*BWFkm8 + kac8*AWFppr8 + kpc8*BWFppr8 
+  AWFkm10 ~ kaa9*AWFkm9 + kpa9*BWFkm9 + kac9*AWFppr9 + kpc9*BWFppr9 
+  AWFkm11 ~ kaa10*AWFkm10 + kpa10*BWFkm10 + kac10*AWFppr10 + kpc10*BWFppr10 
+  AWFkm12 ~ kaa11*AWFkm11 + kpa11*BWFkm11 + kac11*AWFppr11 + kpc11*BWFppr11 
+  AWFkm13 ~ kaa12*AWFkm12 + kpa12*BWFkm12 + kac12*AWFppr12 + kpc12*BWFppr12 
+  AWFkm14 ~ kaa13*AWFkm13 + kpa13*BWFkm13 + kac13*AWFppr13 + kpc13*BWFppr13 
+
+  # For PPR effects
+  AWFppr2 ~ paa1*AWFppr1 + ppa1*BWFppr1 + pac1*AWFkm1 + ppc1*BWFkm1 
+  AWFppr3 ~ paa2*AWFppr2 + ppa2*BWFppr2 + pac2*AWFkm2 + ppc2*BWFkm2 
+  AWFppr4 ~ paa3*AWFppr3 + ppa3*BWFppr3 + pac3*AWFkm3 + ppc3*BWFkm3 
+  AWFppr5 ~ paa4*AWFppr4 + ppa4*BWFppr4 + pac4*AWFkm4 + ppc4*BWFkm4 
+  AWFppr6 ~ paa5*AWFppr5 + ppa5*BWFppr5 + pac5*AWFkm5 + ppc5*BWFkm5 
+  AWFppr7 ~ paa6*AWFppr6 + ppa6*BWFppr6 + pac6*AWFkm6 + ppc6*BWFkm6 
+  AWFppr8 ~ paa7*AWFppr7 + ppa7*BWFppr7 + pac7*AWFkm7 + ppc7*BWFkm7 
+  AWFppr9 ~ paa8*AWFppr8 + ppa8*BWFppr8 + pac8*AWFkm8 + ppc8*BWFkm8 
+  AWFppr10 ~ paa9*AWFppr9 + ppa9*BWFppr9 + pac9*AWFkm9 + ppc9*BWFkm9 
+  AWFppr11 ~ paa10*AWFppr10 + ppa10*BWFppr10 + pac10*AWFkm10 + ppc10*BWFkm10 
+  AWFppr12 ~ paa11*AWFppr11 + ppa11*BWFppr11 + pac11*AWFkm11 + ppc11*BWFkm11 
+  AWFppr13 ~ paa12*AWFppr12 + ppa12*BWFppr12 + pac12*AWFkm12 + ppc12*BWFkm12 
+  AWFppr14 ~ paa13*AWFppr13 + ppa13*BWFppr13 + pac13*AWFkm13 + ppc13*BWFkm13 
+ 
+  
+  # Estimate correlations within same wave
+  AWFkm1 ~~ s*AWFppr1 + t*BWFkm1 + u*BWFppr1 
+  AWFkm2 ~~ s*AWFppr2 + t*BWFkm2 + u*BWFppr2
+  AWFkm3 ~~ s*AWFppr3 + t*BWFkm3 + u*BWFppr3
+  AWFkm4 ~~ s*AWFppr4 + t*BWFkm4 + u*BWFppr4
+  AWFkm5 ~~ s*AWFppr5 + t*BWFkm5 + u*BWFppr5
+  AWFkm6 ~~ s*AWFppr6 + t*BWFkm6 + u*BWFppr6
+  AWFkm7 ~~ s*AWFppr7 + t*BWFkm7 + u*BWFppr7
+  AWFkm8 ~~ s*AWFppr8 + t*BWFkm8 + u*BWFppr8
+  AWFkm9 ~~ s*AWFppr9 + t*BWFkm9 + u*BWFppr9
+  AWFkm10 ~~ s*AWFppr10 + t*BWFkm10 + u*BWFppr10
+  AWFkm11 ~~ s*AWFppr11 + t*BWFkm11 + u*BWFppr11
+  AWFkm12 ~~ s*AWFppr12 + t*BWFkm12 + u*BWFppr12
+  AWFkm13 ~~ s*AWFppr13 + t*BWFkm13 + u*BWFppr13
+  AWFkm14 ~~ s*AWFppr14 + t*BWFkm14 + u*BWFppr14
+  
+  BWFkm1 ~~ v*AWFppr1 + w*BWFppr1 
+  BWFkm2 ~~ v*AWFppr2 + w*BWFppr2
+  BWFkm3 ~~ v*AWFppr3 + w*BWFppr3
+  BWFkm4 ~~ v*AWFppr4 + w*BWFppr4
+  BWFkm5 ~~ v*AWFppr5 + w*BWFppr5
+  BWFkm6 ~~ v*AWFppr6 + w*BWFppr6
+  BWFkm7 ~~ v*AWFppr7 + w*BWFppr7
+  BWFkm8 ~~ v*AWFppr8 + w*BWFppr8
+  BWFkm9 ~~ v*AWFppr9 + w*BWFppr9
+  BWFkm10 ~~ v*AWFppr10 + w*BWFppr10
+  BWFkm11 ~~ v*AWFppr11 + w*BWFppr11
+  BWFkm12 ~~ v*AWFppr12 + w*BWFppr12
+  BWFkm13 ~~ v*AWFppr13 + w*BWFppr13
+  BWFkm14 ~~ v*AWFppr14 + w*BWFppr14
+  
+  AWFppr1 ~~ x*BWFppr1 
+  AWFppr2 ~~ x*BWFppr2
+  AWFppr3 ~~ x*BWFppr3
+  AWFppr4 ~~ x*BWFppr4
+  AWFppr5 ~~ x*BWFppr5
+  AWFppr6 ~~ x*BWFppr6
+  AWFppr7 ~~ x*BWFppr7
+  AWFppr8 ~~ x*BWFppr8
+  AWFppr9 ~~ x*BWFppr9
+  AWFppr10 ~~ x*BWFppr10
+  AWFppr11 ~~ x*BWFppr11
+  AWFppr12 ~~ x*BWFppr12
+  AWFppr13 ~~ x*BWFppr13
+  AWFppr14 ~~ x*BWFppr14
+  
+  
+  ##########################
+  # ADDITIONAL CONSTRAINTS #
+  ##########################
+  
+  # Set correlations between between-factors (RIs) and within-factors at wave 1 at 0
+  ARIkm + ARIppr + BRIkm + BRIppr ~~ 0*AWFkm1 + 0*AWFppr1 + 0*BWFkm1 + 0*BWFppr1
+  
+'
+
+
+base.m1b.fit <- cfa(base.m1b,
+                   data = dfSEM,
+                   std.lv = T,
+                   missing = "ML"
+                   )
+summary(base.m1b.fit,fit.measures = T, standardized =T, ci = T)
+```
+
+
+
+
 
 base.m1 should get the residuals properly specified there (as per:https://lavaan.ugent.be/tutorial/sem.html, which shows that residual correlations are specified like we have so far). But if we need to make that even more specific, here is how we would do it. This coding is necessary if we want to do a test of indistinguishability which would fix all of these to be the same later on. I think this is overkill atm, but good to have if needed. 
 You'd do something like:
@@ -846,12 +1207,12 @@ base.m2 <- '
 '
 
 
-base.m1.fit <- cfa(base.m1,
+base.m2.fit <- cfa(base.m2,
                    data = dfSEM,
                    std.lv = T,
                    missing = "ML"
                    )
-summary(base.m1.fit,fit.measures = T, standardized =T, ci = T)
+summary(base.m2.fit,fit.measures = T, standardized =T, ci = T)
 ```
 
 #### Weak factor invariance model
@@ -1106,7 +1467,8 @@ weak.m1 <- '
   BWFppr13 =~ 1*BFppr13
   BWFppr14 =~ 1*BFppr14
   
-  
+  # Specify lagged effects between within-person centered latent variables
+  # Should be 8 total (16 maximum, but indistinguishable constraints down half of them)
     # (we need these to account for Partner Bs previous responses; it needs to be partialed. Non specifying these == to saything those paths are zero) 
   # outcome:individual:type
   # kaa = kama muta outcome: actor : autoregressive (coming from kama muta)
@@ -1525,7 +1887,9 @@ strong.m1 <- '
   BWFppr14 =~ 1*BFppr14
   
   
-    # (we need these to account for Partner Bs previous responses; it needs to be partialed. Non specifying these == to saything those paths are zero) 
+  # Specify lagged effects between within-person centered latent variables
+  # Should be 8 total (16 maximum, but indistinguishable constraints down half of them)
+  # (we need these to account for Partner Bs previous responses; it needs to be partialed. Non specifying these == to saything those paths are zero) 
   # outcome:individual:type
   # kaa = kama muta outcome: actor : autoregressive (coming from kama muta)
   # kpa = kama muta outcome: partner: autoregressive
@@ -1656,3 +2020,4 @@ summary(strong.m1.fit,fit.measures = T, standardized =T, ci = T)
 
 
 #### Residual Error Invariance, Indistinguishability Test
+I don't think I'll realistically get to do this.
